<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/line_request"
    android:background="@drawable/list_request_shape"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="5dip"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_status"
        android:textStyle="bold"
        android:id="@+id/textViewStatus"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_url"
        android:id="@+id/textViewUrl"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textViewStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_token"
        android:id="@+id/textViewToken"
        android:layout_below="@+id/textViewUrl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewReceivedDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_response"
        android:id="@+id/textViewResponse"
        android:layout_below="@+id/textViewToken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>