<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="19dp"
    android:paddingRight="19dp"
    android:orientation="vertical"

    tools:context=".MainActivity">



    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:textColorHint="@color/colorUsernameAndPasswordPlaceholder"
            android:padding="15dp"
            android:textSize="20sp"
            android:hint="@string/button_username"
            android:layout_marginBottom="22dp"
            android:id="@+id/editText_username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:background="@drawable/login_shape"
            android:textColorHint="@color/colorUsernameAndPasswordPlaceholder"
            android:padding="15dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/button_password"
            android:id="@+id/editText_password"
            android:layout_gravity="center_horizontal"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundLoginButton"
            android:textColor="@color/colorTextLoginButton"
            android:height="60dp"
            android:textSize="20sp"
            android:text="@string/button_login"
            android:id="@+id/button_login"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>