<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRequestBackground"
        android:orientation="vertical"
        android:paddingLeft="19dp"
        android:paddingBottom="19dp"
        android:paddingRight="19dp" tools:context=".RequestsActivity">


    <RelativeLayout
        android:background="@color/colorBackgroundTopBarRequest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="13dp"
        android:id="@+id/topBarRequest">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:background="@drawable/button_request_topbar_shape"
            android:textColor="@color/colorTextRequestButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_expire"
            android:id="@+id/button_expire"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:background="@drawable/button_request_topbar_shape"
            android:textColor="@color/colorTextRequestButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_logout"
            android:id="@+id/button_logout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/topBarRequest"
        android:layout_above="@+id/button_sendRequest" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundSendRequestButton"
        android:textColor="@color/colorTextRequestButton"
        android:height="60dp"
        android:textSize="20sp"
        android:text="@string/button_request"
        android:id="@+id/button_sendRequest"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
